--- a/style.css
+++ b/style.css
@@ -845,6 +845,343 @@ textttttt{
 }
 
 
+/* General reset */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Poppins, sans-serif;
+}
+
+/* Base styles */
+body {
+    height: 100vh;
+    background: #191919;
+}
+
+/* Container */
+.container, .container9 {
+    margin: auto;
+    width: 90%;
+    max-width: 1170px;
+}
+
+/* Header & Navigation */
+.toggle {
+    position: absolute;
+    height: 30px;
+    width: 30px;
+    top: 20px;
+    left: 15px;
+    z-index: 1;
+    cursor: pointer;
+    border-radius: 2px;
+    background-color: #000000;
+    box-shadow: 0 0 10px rgb(0, 0, 0);
+}
+.toggle .common {
+    position: absolute;
+    height: 2px;
+    width: 20px;
+    background-color: rgb(255, 255, 255);
+    border-radius: 50px;
+    transition: 0.3s ease;
+}
+.slide {
+    height: 100%;
+    width: 180px;
+    position: absolute;
+    background-color: #f9004d;
+    transition: 0.5s ease;
+    transform: translateX(-180px);
+}
+input:checked ~ .slide {
+    transform: translateX(0);
+}
+input:checked ~ .toggle .topline {
+    left: 2px;
+    top: 14px;
+    width: 25px;
+    transform: rotate(-45deg);
+}
+input:checked ~ .toggle .middleline {
+    opacity: 0;
+}
+input:checked ~ .toggle .bottomline {
+    left: 2px;
+    top: 14px;
+    width: 25px;
+    transform: rotate(45deg);
+}
+
+/* Typography */
+h1 {
+    color: rgb(255, 255, 255);
+    font-weight: 800;
+    text-align: right;
+    padding: 10px 0;
+    padding-right: 30px;
+    pointer-events: none;
+}
+ul, li {
+    list-style: none;
+}
+ul, li, a {
+    color: rgb(255, 255, 255);
+    font-weight: 500;
+    padding: 5px 0;
+    display: block;
+    text-transform: capitalize;
+    text-decoration: none;
+    transition: 0.2s ease-out;
+}
+ul li a i {
+    width: 40px;
+    text-align: center;
+}
+input {
+    display: none;
+    visibility: hidden;
+    -webkit-appearance: none;
+}
+
+/* Profile Cards */
+.profile-card {
+    position: relative;
+    width: 220px;
+    height: 220px;
+    background-color: #fff;
+    padding: 30px;
+    border-radius: 50%;
+    box-shadow: -5px 8px 45px rgba(51, 51, 51, 0.126);
+    transition: all .4s;
+    margin: 0 20px;
+}
+.profile-card:hover {
+    border-radius: 10px;
+    height: 260px;
+}
+.profile-card .img {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+.profile-card:hover img {
+    border-radius: 10px;
+    transform: translateY(-70px);
+}
+.img img {
+    object-fit: fill;
+    width: 100%;
+    border-radius: 50%;
+    transition: all .4s;
+    z-index: 99;
+}
+.caption {
+    text-align: center;
+    transform: translateY(-90px);
+    opacity: 0;
+    pointer-events: none;
+    transition: all .5s;
+}
+.profile-card:hover .caption {
+    opacity: 1;
+    pointer-events: all;
+}
+.caption h3 {
+    font-size: 21px;
+    color: #0c52a1;
+    font-weight: 600;
+}
+.caption p {
+    font-size: 15px;
+    font-weight: 500;
+    margin: 2px 0 12px 0;
+}
+.caption .social-links i {
+    font-size: 21px;
+    margin: 0 3px;
+    cursor: pointer;
+    color: #333;
+    transition: all .4s;
+}
+.caption .social-links i:hover {
+    color: #0c52a1;
+}
+
+/* Sections */
+.home-container, .home-container2 {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.home-container {
+    height: 500px;
+    background-color: #191919;
+}
+.home-container2 {
+    height: 150px;
+    background-color: #191919;
+}
+.about, .about2, .about4 {
+    width: 100%;
+    padding: 78px 0px;
+    background-color: #191919;
+}
+.about-text, .about-text2, .about-text3, .about-text4 {
+    width: 1000px;
+    text-align: center;
+}
+.about-text h1, .about-text2 h1, .about-text3 h1, .about-text4 h1 {
+    color: white;
+    font-size: 60px;
+    text-transform: uppercase;
+    margin-bottom: 20px;
+}
+.about-text h5, .about-text2 h5, .about-text4 h5 {
+    color: white;
+    font-size: 25px;
+    text-transform: capitalize;
+    margin-bottom: 25px;
+    letter-spacing: 2px;
+}
+span {
+    color: #f9004d;
+}
+.about-text p, .about-text2 p, .about-text3 p, .about-text4 p {
+    color: white;
+    letter-spacing: 1px;
+    line-height: 28px;
+    font-size: 18px;
+    margin-bottom: 45px;
+}
+#but, #but2, #but4 {
+    background: #f9004d;
+    color: white;
+    text-decoration: none;
+    border: 2px solid transparent;
+    font-weight: bold;
+    padding: 13px 30px;
+    border-radius: 30px;
+    transition: .4s;
+}
+button:hover {
+    background: transparent;
+    border: 2px solid #f9004d;
+    cursor: pointer;
+}
+
+/* Footer */
+.footer {
+    background-color: #191919;
+    padding: 70px 0;
+}
+.footer-col {
+    width: 25%;
+    padding: 0 15px;
+}
+.footer-col h4 {
+    font-size: 18px;
+    color: #ffffff;
+    text-transform: capitalize;
+    margin-bottom: 35px;
+    font-weight: 500;
+    position: relative;
+}
+.footer-col h4::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -10px;
+    background-color: #e91e63;
+    height: 2px;
+    box-sizing: border-box;
+    width: 50px;
+}
+.footer-col ul li:not(:last-child) {
+    margin-bottom: 10px;
+}
+.footer-col ul li a {
+    font-size: 16px;
+    text-transform: capitalize;
+    color: #bbbbbb;
+    text-decoration: none;
+    font-weight: 300;
+    display: block;
+    transition: all 0.3s ease;
+}
+.footer-col ul li a:hover {
+    color: #ffffff;
+    padding-left: 8px;
+}
+.footer-col .social-links a {
+    display: inline-block;
+    height: 40px;
+    width: 40px;
+    background-color: rgba(255, 255, 255, 0.2);
+    margin: 0 10px 10px 0;
+    text-align: center;
+    line-height: 40px;
+    border-radius: 50%;
+    color: #ffffff;
+    transition: all 0.5s ease;
+}
+.footer-col .social-links a:hover {
+    color: #24262b;
+    background-color: #ffffff;
+}
+
+/* Buttons */
+.btn {
+    font-size: 20px;
+    background-color: #000000;
+    margin-top: 25px;
+}
+.btn:hover {
+    border: 2px solid white;
+}
+p7, p8, p9 {
+    font-size: 18px;
+}
+
+/* End Section */
+.end {
+    background-color: #f9004d;
+    width: 100%;
+    height: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    opacity: 80%;
+}
+.end:hover {
+    opacity: 100%;
+}
+.end1, .end2, .end3 {
+    background-color: #000000;
+    width: 100%;
+    color: white;
+}
+.end1 {
+    height: 70px;
+}
+.end2 {
+    height: 20px;
+}
+.end3 {
+    height: 50px;
+}
+texttt {
+    font-size: 30px;
+    font-family: cursive;
+}
+textttt, texttttt, textttttt {
+    font-size: 15px;
+    font-family: cursive;
+}
+texttt
 
 
 
